fix: use character level in roadmap header
